# typetrait

./: Cargo.toml  README.md
src/: codegen.rs  lib.rs  parse.rs
src/blanket/: codegen.rs  mod.rs  parse.rs
src/union/: codegen.rs  mod.rs
tests/ui/fail/: init_fails.rs  init_fails.stderr  unsafe_impl.rs  unsafe_impl.stderr
tests/ui/pass/: blanket_example.rs  example.rs
