[package]
name = "typetrait"
version = "0.1.0"
edition = "2021"
description = "Helper macro to generate types for typestate programming"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"

[dev-dependencies]
trybuild = "1.0"
